// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DashboardView renders a loading indicator during the loading 1`] = `
<div
  className="loading"
>
  <div />
  <div />
  <div />
</div>
`;

exports[`DashboardView renders an error card for an error 1`] = `
<div
  className="card errorcard"
>
  <div
    className="css-1nc71gt"
  >
    <div
      className="errorcard-container"
    >
      <div
        className="css-kglogr"
      >
        <h1
          className="title-l"
        >
          An error has occurred
        </h1>
      </div>
      <p>
        Please contact the administrator to try to find a solution (code: 500)
      </p>
    </div>
  </div>
</div>
`;

exports[`DashboardView renders an error card for an unsupported state 1`] = `
<div
  className="card errorcard"
>
  <div
    className="css-1nc71gt"
  >
    <div
      className="errorcard-container"
    >
      <div
        className="css-kglogr"
      >
        <h1
          className="title-l"
        >
          The dashboard is in an unsupported state: INITIAL__STATE
        </h1>
      </div>
      <p>
        Contact your administrator to find a suitable solution (code: 1001)
      </p>
    </div>
  </div>
</div>
`;

exports[`DashboardView renders the projects 1`] = `
<div
  className="dashboardview"
>
  <div
    className="css-38q71r"
  >
    <div
      className="text xl bold"
    >
      Dashboard
    </div>
  </div>
  <div
    className="dashboardoverviewsection"
  >
    <div
      className="css-1ww0b7b"
    >
      <div
        className="text m semibold"
      >
        Overview
      </div>
      <div
        className="css-8ikfdx"
      >
        <div
          className="dashboardoverviewsection-container"
        >
          <div
            className="card infocard projectsinfocard"
          >
            <div
              className="css-1nc71gt"
            >
              <div
                className="infocard-container"
              >
                <h1
                  className="infocard-title"
                >
                  0
                </h1>
                <p
                  className="infocard-message"
                >
                  Projects
                </p>
              </div>
            </div>
          </div>
          <div
            className="card infocard viewpointsinfocard"
          >
            <div
              className="css-1nc71gt"
            >
              <div
                className="infocard-container"
              >
                <h1
                  className="infocard-title"
                >
                  27
                </h1>
                <p
                  className="infocard-message"
                >
                  Viewpoints
                </p>
              </div>
            </div>
          </div>
          <div
            className="card infocard metamodelsinfocard"
          >
            <div
              className="css-1nc71gt"
            >
              <div
                className="infocard-container"
              >
                <h1
                  className="infocard-title"
                >
                  132
                </h1>
                <p
                  className="infocard-message"
                >
                  Metamodels
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="dashboardprojectssection"
  >
    <div
      className="css-1ww0b7b"
    >
      <div
        className="text m semibold"
      >
        <a
          href="/projects"
          onClick={[Function]}
        >
          Projects
        </a>
      </div>
      <div
        className="css-8ikfdx"
      >
        <div
          className="dashboardprojectssection-container"
        >
          <a
            href="/newproject"
            onClick={[Function]}
          >
            <div
              className="card infocard dashboardprojectssection-newcard"
              to=""
            >
              <div
                className="css-1nc71gt"
              >
                <div
                  className="infocard-container"
                >
                  <h1
                    className="infocard-title"
                  >
                    +
                  </h1>
                  <p
                    className="infocard-message"
                  >
                    New Project
                  </p>
                </div>
              </div>
            </div>
          </a>
          <div
            className="card projectsummarycard"
          >
            <a
              href="/projects/First Project"
              onClick={[Function]}
            >
              <div
                className="css-kglogr"
              >
                <div
                  className="text l semibold hideoverflow"
                >
                  First Project
                </div>
              </div>
            </a>
            <div
              className="css-sfh1o5"
            >
              <div
                className="text s regular"
              >
                No description provided
              </div>
            </div>
          </div>
          <div
            className="card projectsummarycard"
          >
            <a
              href="/projects/Second Project"
              onClick={[Function]}
            >
              <div
                className="css-kglogr"
              >
                <div
                  className="text l semibold hideoverflow"
                >
                  Second Project
                </div>
              </div>
            </a>
            <div
              className="css-sfh1o5"
            >
              <div
                className="text s regular"
              >
                No description provided
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
